# rag-application

./: .gitignore  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20250713212025_initial.py
elasticsearch/: kibana.Dockerfile
images/: es.Dockerfile
scripts/: seed.py
server/: .gitignore  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 20250702223303_test.py  20250713161515_test.py  20250713161654_test.py  6d393b889c10_initial_migration.py  f74747e9abd5_initial_migration.py
server/scripts/: init-db.sh  seed.py
server/src/: config.py  logger.py  main.py  middlewares.py  routers.py
server/src/ai/: embedder.py  services.py  splitter.py
server/src/auth/: crud.py  deps.py  schemas.py  security.py  views.py
server/src/database/: base.py  models.py
server/src/documents/: models.py  views.py
server/src/files/: crud.py  services.py  utils.py  views.py
server/tests/: conftest.py  test_database.py  test_logger.py  test_main.py
server/tests/files/: test_services.py
src/: main.py
src/auth/: crud.py  deps.py  models.py  security.py  views.py
src/common/: httputils.py  logger.py  routers.py
src/database/: base.py  providers.py
src/files/: crud.py  models.py  services.py  views.py
src/ingestion/: es_models.py  models.py  views.py
