[project]
name = "rag-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "elasticsearch==8.13.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.14",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "jose>=1.0.0",
    "passlib>=1.7.4",
    "psycopg2>=2.9.10",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "sqlmodel>=0.0.24",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "transformers>=4.53.0",
    "uvicorn>=0.34.3",
]
